# Paper-to-Results-Graph

./: .env.example  .gitignore  BUILD_LOOP.md  README.md  package-lock.json  package.json  playwright.config.js  requirements-core.txt  requirements-dev.txt  requirements-optional.txt  requirements.txt  tsconfig.json
app/: arxiv.py  brightdata.py  butterbase.py  codegen.py  cognee_memory.py  curator.py  db.py  demo_reset.py  extract.py  graph.py  grounded_qa.py  insights.py  llm.py  local_exec.py  pdf_extract.py  queries.py  research_tools.py  restore.py  runner.py  security.py  server.py  validation.py  workspace.py  workspace_storage.py
butterbase/: impl_bundle.json  schema.json  verigraph_api.test.cjs  verigraph_api.ts
deploy/: index.html
docs/: ARCHITECTURE.md
e2e/: demo.spec.js
papers/: balachandran2025.txt  loshchilov2017.txt  wilson2017.txt
pipelines/: groundtruth.pipe  paper-brief.pipe  paper-execute.pipe  paper-investigate.pipe  paper-orchestrator.pipe  paper2result.pipe  verigraph.pipe
reference/: butterbase-reference.md  hackwithbay-3.0-prep.md  neo4j-reference.md  problem-statement.md  rocketride-llms-full.txt  rocketride-reference.md  some-neo4j-resources.md
reference/rocketride-server/apps/engine/: CMakeLists.txt
reference/rocketride-server/apps/engine/src/: main.cpp
reference/rocketride-server/apps/engine/src/res/: .gitignore
scripts/: check_brief.py  check_cognee_cloud.py  check_execute.py  check_investigate.py  check_neo4j.py  check_orchestration.py  check_pipeline.py  demo_loop.py  deploy_butterbase.py  reset_demo.py  submit_hackathon.py  (+6 more)
(+1441 files in other folders)
